Update metadata & favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,15 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+
+    <meta name="description" content="Nu är det dags för KodachiCon!"/>
+    <meta property="og:description" content="Nu är det dags för KodachiCon!" />
+
+    <meta name="author" content="KodachiKai" />
+
+    <meta property="og:image", content="https://www.kodachi.se/img/kodachicon_new.jpg" />
+    <link rel="image_src" type="image/jpeg" href="/img/kodachicon_new.jpg" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +28,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kodachikai!</title>
+    <meta property="og:title" content="KodachiKai!" />
   </head>
   <body>
     <noscript>
